# brokk

./: .gitignore  .jdpignore  AGENTS.md  BRANCH_CHANGES.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  INSTALL.sh  ListMethods.java  PLANS.md  PR_PANEL_INSTANTIATION.md  PULL_REQUEST_CHECKLIST.md  README.md  README_wrapper.md  Source for ai.brokk.Llm.loop  TESTING.md  brokk  brokk_wrapper.py  brokkw  brokkw.bat  build.gradle.kts  build.sbt  cli  gradle.properties  gradlew  issue-1474-hang-on-quit-fix-plan.md  jbang-catalog.json  newFile.txt  package-lock.json  package.json  pnpm-lock.yaml  preds.json  readme_refactor.txt  run-tui  settings.gradle.kts  swe_bench_helper.py  test_pred.json  test_wrapper.py
brokk-acp-rust/: Cargo.toml  PLANS.md  PLAN_WASM_SANDBOX.md  README.md  build.rs
brokk-acp-rust/brokk-acp-sandbox/: Cargo.toml
brokk-acp-rust/brokk-acp-sandbox/src/: lib.rs  main.rs  search.rs  skills.rs  zip_reader.rs
brokk-acp-rust/src/: agent.rs  agents_md.rs  bifrost_client.rs  codex_auth.rs  codex_client.rs  discovery.rs  llm_client.rs  main.rs  multi_backend.rs  openrouter_auth.rs  sandbox_backend.rs  session.rs  skills.rs  tool_loop.rs
brokk-acp-rust/src/tool_loop/: announce.rs  gate.rs
brokk-acp-rust/src/tools/: filesystem.rs  mod.rs  sandbox.rs  shell.rs  wasi_sandbox.rs
brokk-acp-rust/xtask/: Cargo.toml
brokk-acp-rust/xtask/src/: main.rs
brokk-code/: AGENTS.md  README.md  pyproject.toml
brokk-code/.brokk/: c_cpp.bin.gzip  go.bin.gzip  java.bin.gzip  php.bin.gzip  project.properties  rust.bin.gzip  typescript.bin.gzip  workspace.properties
brokk-code/.brokk/llm-history/2026-02-09-20-30-02 Scan ContextAgent Unanalyzed can you tell me/: 20-30.02 001-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-30-02 Search Search can you tell me what this/: 20-30.05 001-request.json  20-30.12 002-request.json  20-30.19 003-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-30-38 Scan ContextAgent Unanalyzed Task Confirm and/: 20-30.38 001-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-30-40 Code Task Confirm and document the local/: 20-30.40 001-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-30-42 Architect Architect Task Confirm and document the/: 20-30.43 001-request.json  20-30.48 002-request.json  20-30.53 003-request.json  20-30.59 004-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-31-11 Code Goal make uv run ruff check ./: 20-31.11 001-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-32-35 Scan ContextAgent Unanalyzed can you tell me/: 20-32.35 001-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-32-35 Search Search can you tell me what is/: 20-32.38 001-request.json  20-32.47 002-request.json  20-32.57 003-request.json  20-33.03 004-request.json  20-33.16 005-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-33-27 Scan ContextAgent Unanalyzed Task Update the/: 20-33.27 001-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-33-29 Code Task Update the top of README.md to/: 20-33.29 001-request.json  20-33.31 002-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-37-33 Scan ContextAgent Unanalyzed can you tell me/: 20-37.33 001-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-37-33 Search Search can you tell me what this/: 20-37.36 001-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-37-47 Scan ContextAgent Unanalyzed Task Add a short/: 20-37.47 001-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-37-49 Code Task Add a short explicit What this/: 20-37.49 001-request.json  20-37.52 002-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-37-54 Architect Architect Task Add a short explicit What/: 20-37.55 001-request.json  20-38.01 002-request.json
brokk-code/.brokk/llm-history/2026-02-09-20-38-07 Code Fix ruff errors reported in Latest Build/: 20-38.07 001-request.json
brokk-code/brokk-code/tests/: test_chat_panel.py
brokk-code/brokk_code/: __main__.py  acp_profile.py  acp_server.py  app.py  event_utils.py  executor.py  git_worktrees.py  intellij_config.py  mcp_config.py  mcp_launcher.py  mcp_proxy.py  mcp_pure_launcher.py  plugin_config.py  prompt_history.py  query_launcher.py  review_models.py  runtime_paths.py  rust_acp_install.py  session_persistence.py  settings.py  settings_modal.py  welcome.py  workspace.py  worktrees.py  zed_config.py
brokk-code/brokk_code/modals/: commands_modal.py
brokk-code/brokk_code/styles/: app.tcss  review_panel.tcss
brokk-code/brokk_code/widgets/: brokk_defense.py  chat_panel.py  context_panel.py  dependencies_panel.py  review_panel.py  session_panel.py  status_line.py  tasklist_panel.py  token_bar.py
brokk-code/brokk_tui/: __main__.py  app.py
brokk-code/brokk_tui/widgets/: context_panel.py
brokk-code/tests/: test_acp_profiles.py  test_acp_server.py  test_api_key_prompt.py  test_api_key_relaunch.py  test_app_cost.py  test_autocommit_toggle.py  test_brokkapp_shutdown.py  test_build_detection_notifications.py  test_chat_panel.py  test_chat_panel_layout.py  test_cli_modes.py  test_cwd_isolation.py  test_executor_add_context_text_validation.py  test_executor_download.py  test_executor_payload.py  test_executor_pr_review.py  test_executor_resilience.py  test_executor_sessions.py  test_executor_settings.py  test_executor_start.py  test_executor_streaming.py  test_git_worktrees.py  test_github_auth.py  test_intellij_config.py  test_login_logout_commands.py  test_mcp_config.py  test_mcp_integration.py  test_mcp_launcher.py  test_mode_suggestions.py  test_mode_toggle.py  test_model_command_menu.py  test_model_selector.py  test_openai_auth.py  test_openai_login_command.py  test_openai_oauth.py  test_plugin_config.py  test_pr_command.py  test_pr_tui.py  test_prompt_history.py  test_reasoning_selector.py  (+42 more)
brokk-foreman/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
brokk-foreman/src-tauri/capabilities/: default.json
brokk-foreman/src-tauri/src/: commands.rs  config.rs  events.rs  lib.rs  main.rs  worktree.rs
brokk-foreman/src-tauri/tests/: registry_parse.rs
(+4050 files in other folders)
