[workspace]
members = ["xtask"]
# Keep `cargo build` / `cargo test` from the workspace root focused on the
# root crate. The xtask sub-crate is dev-only and is invoked through the
# `cargo xtask` alias (see .cargo/config.toml), which builds it on demand.
default-members = ["."]

[package]
name = "brokk-acp-rust"
version = "0.3.1"
edition = "2024"
description = "Rust ACP server for Brokk with auto-discovery for Codex (~/.codex/auth.json) and Ollama"
license = "LGPL-3.0"

[[bin]]
name = "brokk-acp"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "0.11", features = ["unstable_session_resume"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
zip = "8"
futures = "0.3"
regex = "1"
reqwest = { version = "0.13", features = ["stream", "json", "cookies", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
# Codex login. We deliberately avoid single-maintainer credential crates:
# `oauth2` is the de-facto Rust OAuth2 implementation (~32M downloads,
# depended on by Servo etc.) and gives us PKCE + refresh. The RFC 8693
# Token Exchange step that converts the id_token into the OPENAI_API_KEY
# is one POST written by hand in `codex_auth.rs`. JWT decoding for the
# account_id is also inline (no `jsonwebtoken` dep) since we trust the
# issuer over HTTPS and only need the unverified `chatgpt_account_id`
# claim. `tiny_http` runs the loopback callback for ~30s during login.
oauth2 = { version = "5", default-features = false }
tiny_http = "0.12"
webbrowser = "1"
base64 = "0.22"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
# YAML frontmatter parser for Agent Skills (`SKILL.md`). `serde_yaml` is
# archived but stable and is what codex's core-skills uses; staying on it
# avoids ecosystem churn. Revisit only on CVE.
serde_yaml = "0.9"

# WASI sandbox fallback. Used when the native OS sandbox (sandbox-exec on
# macOS, bwrap on Linux) is unavailable -- notably inside Docker (where
# unprivileged user namespaces are commonly disabled and bwrap fails at
# runtime even when its binary is on PATH) and on Windows. Strictly weaker
# than the native sandboxes: WASI cannot wrap arbitrary `sh -c "<cmd>"`
# because POSIX `fork`/`exec` and shell features (pipelines, redirections,
# command substitution) are not in the WASI preview1/preview2 API surface.
# Only commands that parse cleanly as `<tool> [args...]` AND whose `<tool>`
# has a registered WASI module get sandboxed; everything else falls back
# to unsandboxed exec with a loud warning. See `tools/wasi_sandbox.rs`.
#
# wasmtime governance: Bytecode Alliance (Mozilla, Fastly, Intel,
# Microsoft, Siemens, ...). Not a single-maintainer credential-adjacent
# crate, so the supply-chain bar from `feedback_credential_dep_vetting`
# is met. Heavy in compile time / binary size (~10MB stripped); revisit
# only if WASI delivers measurable security wins for the bundled modules.
wasmtime = "44"
wasmtime-wasi = "44"

# Unix-only: `setrlimit` via `Command::pre_exec` for per-process resource caps
# applied to `runShellCommand`. See `tools/shell.rs::apply_rlimits`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# `test-util` enables `tokio::time::pause()` and `#[tokio::test(start_paused = true)]`,
# used by the LLM stream idle-timeout test to avoid waiting wall-clock seconds.
tokio = { version = "1", features = ["test-util"] }
# Used by the bifrost test fixture (`bifrost_client::tests`) to verify
# the downloaded release archive against its `.sha256` sidecar before
# extraction, mirroring what `brokk-code/brokk_code/rust_acp_install.py`
# already does for the production install path.
sha2 = "0.10"
# Used by `agents_md` tests to build throwaway project trees (`.git`
# marker + AGENTS.md/CLAUDE.md fixtures) without polluting the working
# directory.
tempfile = "3"
