[workspace]
members = ["xtask", "brokk-acp-sandbox"]
# Keep `cargo build` / `cargo test` from the workspace root focused on the
# root crate. The xtask sub-crate is dev-only and is invoked through the
# `cargo xtask` alias (see .cargo/config.toml), which builds it on demand.
# `brokk-acp-sandbox` is dual-purpose: linked as a library for the native
# fallback path AND built separately to `wasm32-wasip2` (its binary form)
# so the embedded wasmtime can run untrusted parser code in a sandbox.
default-members = ["."]

[package]
name = "brokk-acp-rust"
version = "0.4.4"
edition = "2024"
description = "Rust ACP server for Brokk with auto-discovery for Codex (~/.codex/auth.json) and Ollama"
license = "LGPL-3.0"

[[bin]]
name = "brokk-acp"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "0.11", features = ["unstable_session_resume"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
# Pure-parsing library, also built as a wasm32-wasip2 binary that
# wasmtime hosts when the wasm sandbox is enabled.
brokk-acp-sandbox = { path = "brokk-acp-sandbox" }
# Embedded wasm runtime + WASI Preview 2 bindings for the sandboxed
# parser. Used to host `brokk-acp-sandbox.wasm` in-process with
# fuel-based CPU limits and capability-scoped fs access.
wasmtime = { version = "27", default-features = false, features = ["cranelift", "cache", "parallel-compilation", "component-model", "runtime"] }
wasmtime-wasi = "27"
zip = "8"
futures = "0.3"
regex = "1"
reqwest = { version = "0.13", features = ["stream", "json", "cookies", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
# Codex login. We deliberately avoid single-maintainer credential crates:
# `oauth2` is the de-facto Rust OAuth2 implementation (~32M downloads,
# depended on by Servo etc.) and gives us PKCE + refresh. The RFC 8693
# Token Exchange step that converts the id_token into the OPENAI_API_KEY
# is one POST written by hand in `codex_auth.rs`. JWT decoding for the
# account_id is also inline (no `jsonwebtoken` dep) since we trust the
# issuer over HTTPS and only need the unverified `chatgpt_account_id`
# claim. `tiny_http` runs the loopback callback for ~30s during login.
oauth2 = { version = "5", default-features = false }
tiny_http = "0.12"
webbrowser = "1"
base64 = "0.22"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
# YAML frontmatter parser for Agent Skills (`SKILL.md`). `serde_yaml` is
# archived but stable and is what codex's core-skills uses; staying on it
# avoids ecosystem churn. Revisit only on CVE.
serde_yaml = "0.9"

# Unix-only: `setrlimit` via `Command::pre_exec` for per-process resource caps
# applied to `runShellCommand`. See `tools/shell.rs::apply_rlimits`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# `test-util` enables `tokio::time::pause()` and `#[tokio::test(start_paused = true)]`,
# used by the LLM stream idle-timeout test to avoid waiting wall-clock seconds.
tokio = { version = "1", features = ["test-util"] }
# Used by the bifrost test fixture (`bifrost_client::tests`) to verify
# the downloaded release archive against its `.sha256` sidecar before
# extraction, mirroring what `brokk-code/brokk_code/rust_acp_install.py`
# already does for the production install path.
sha2 = "0.10"
# Used by `agents_md` tests to build throwaway project trees (`.git`
# marker + AGENTS.md/CLAUDE.md fixtures) without polluting the working
# directory.
tempfile = "3"
# Used by `discovery::tests` to mock the Ollama `/v1/models` HTTP
# response shape and validate that `discover_ollama` parses it
# correctly. Without a mock, the existing tests only exercise the
# connection-refused error path.
wiremock = "0.6"
