[package]
name = "brokk-acp-sandbox"
version = "0.1.0"
edition = "2024"
description = "Pure-parsing logic for brokk-acp-rust that runs either natively (linked as a library) or inside a wasmtime-hosted WASI sandbox (built as the `brokk-acp-sandbox` binary). The wasm path gives memory/crash/CPU isolation around untrusted YAML, zip, and regex inputs without losing the ability to fall back to native for performance."
license = "LGPL-3.0"

# Both a library (linked into the native brokk-acp binary) and a binary
# (compiled to `wasm32-wasip2`, embedded via `include_bytes!` and run
# under wasmtime). The library and binary share the same parsing code;
# the binary only adds a JSON-RPC dispatcher on top of stdin/stdout.
[lib]
name = "brokk_acp_sandbox"
path = "src/lib.rs"

[[bin]]
name = "brokk-acp-sandbox"
path = "src/main.rs"

[dependencies]
# Pure-Rust deps only -- this crate must compile to `wasm32-wasip2`
# without any `*-sys` crate triggering a C build.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
