[package]
name = "brokk-acp-sandbox"
version = "0.1.0"
edition = "2024"
description = "Pure-parsing logic for brokk-acp-rust that runs either natively (linked as a library) or inside a wasmtime-hosted WASI sandbox (built as the `brokk-acp-sandbox` binary). The wasm path gives memory/crash/CPU isolation around untrusted YAML, zip, and regex inputs without losing the ability to fall back to native for performance."
license = "LGPL-3.0"

# Both a library (linked into the native brokk-acp binary) and a binary
# (compiled to `wasm32-wasip2`, embedded via `include_bytes!` and run
# under wasmtime). The library and binary share the same parsing code;
# the binary only adds a JSON-RPC dispatcher on top of stdin/stdout.
[lib]
name = "brokk_acp_sandbox"
path = "src/lib.rs"

[[bin]]
name = "brokk-acp-sandbox"
path = "src/main.rs"

[dependencies]
# Pure-Rust deps only -- this crate must compile to `wasm32-wasip2`
# without any `*-sys` crate triggering a C build.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
# `regex` is the ReDoS-safe (linear-time) regex engine the host's
# `searchFileContents` already uses; running it inside the sandbox
# adds wasm-fuel as a second backstop in case a future regex feature
# breaks the linear-time guarantee.
regex = "1"
# Recursive directory walking inside the sandbox for `searchFileContents`.
# `walkdir` is pure Rust and works through WASI preopens, so the
# guest can walk a host directory that the host hands it.
walkdir = "2"
# DEFLATE decoder for the minimal zip reader in `src/zip_reader.rs`.
# We do not pull the full `zip` crate here because its transitive
# `typed-path` dep activates `#![feature(wasip2)]` on `wasm32-wasip2`,
# which requires nightly Rust. `rc-zip-sync` is similarly blocked
# because it needs `std::fs::File: ReadAt`, which `wasi` does not
# implement. Implementing the ~100 lines of central-directory parsing
# ourselves is cheaper than fighting the dependency graph, and it
# matches what the sandbox actually needs: read-only access to a
# small set of named text entries from a session zip.
miniz_oxide = { version = "0.9", default-features = false, features = ["with-alloc"] }
