[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
license = "LGPL-3.0"
description = "Workspace developer helpers for brokk-acp-rust (build + editor wiring)."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
